--- a/mencoba three js/index.html
+++ b/mencoba three js/index.html
@@ -6,7 +6,7 @@
     <style>
         *{
             font-family: "Times New Roman", Times, serif;
-            background-color: rgba(88, 238, 193, 0.993);
+            background-color: rgba(179, 181, 187);
         }
 
         h1{
@@ -20,7 +20,7 @@
             display: block;
             text-align: center;
             border-radius: 1rem;
-            border: 5px solid rgb(36, 40, 248);
+            border: 5px solid rgb(129, 127, 117);
             width: 800px;
         }
     </style>
@@ -45,7 +45,7 @@
         let createSphere = function(){
                 let geometry = new THREE.SphereGeometry(0.5, 12, 30);
                 let material = new THREE.MeshBasicMaterial({
-                        color: 0x0095DD,
+                        color: 0xcdfff9,
                         wireframe: true,
                         wireframeLinewidth: 2
                         });
@@ -56,9 +56,7 @@
         let box;
         let createBox = function(){
                 let geometry = new THREE.BoxGeometry(1, 1, 1);
-                let material = new THREE.MeshPhongMaterial({
-                        color: 0x0095DD
-                        });
+                let material = new THREE.MeshPhongMaterial({color: 0xa5ffd6});
                 box = new THREE.Mesh(geometry, material);
                 scene.add(box);
         }
@@ -66,7 +64,7 @@
         let cylinder;
         let createCylinder = function(){
                 let geometry = new THREE.CylinderGeometry(0.5, 0.5, 1, 20);
-                let material = new THREE.MeshLambertMaterial({color: 0x0095DD});
+                let material = new THREE.MeshLambertMaterial({color: 0xc5d9e2});
                 cylinder = new THREE.Mesh(geometry, material);
                 scene.add(cylinder);
         }
@@ -74,7 +72,7 @@
         let octahedron;
         let createOctahedron = function(){
                 let geometry = new THREE.OctahedronGeometry(1, 1);
-                let material = new THREE.MeshLambertMaterial({color: 0x0095DD});
+                let material = new THREE.MeshLambertMaterial({color: 0xcdfff9});
                 octahedron = new THREE.Mesh(geometry, material);
                 scene.add(octahedron);
         }
@@ -82,7 +80,7 @@
         let torus;
         let createTorus = function(){
                 let geometry = new THREE.TorusGeometry(0.5, 0.3,5, 10);
-                let material = new THREE.MeshPhysicalMaterial({ color: 0x0095DD});
+                let material = new THREE.MeshPhysicalMaterial({ color: 0xa5ffd6});
                 torus = new THREE.Mesh(geometry, material);
                 scene.add(torus);
         }
@@ -90,7 +88,7 @@
         let plane;
         let createPlane = function(){
                 let geometry = new THREE.PlaneGeometry(1, 1);
-                let material = new THREE.MeshLambertMaterial({color: 0x0095DD});
+                let material = new THREE.MeshLambertMaterial({color: 0xc5d9e2});
                 plane = new THREE.Mesh(geometry, material);
                 scene.add(plane);
         }
@@ -98,7 +96,7 @@
         let circle;
         let createCircle = function(){
                 let geometry = new THREE.CircleGeometry(1, 40);
-                let material = new THREE.MeshLambertMaterial({color: 0x0095DD});
+                let material = new THREE.MeshLambertMaterial({color: 0xcdfff9});
                 circle = new THREE.Mesh(geometry, material);
                 scene.add(circle);
         }
@@ -106,7 +104,7 @@
         let cone;
         let createCone = function(){
                 let geometry = new THREE.ConeGeometry(0.5, 1, 40);
-                let material = new THREE.MeshLambertMaterial({color: 0x0095DD});
+                let material = new THREE.MeshLambertMaterial({color: 0xa5ffd6});
                 cone = new THREE.Mesh(geometry, material);
                 scene.add(cone);
         }
@@ -151,7 +149,7 @@
             scene.background = new THREE.Color(0x000000);
            
             // 2. create an locate the camera       
-            camera = new THREE.PerspectiveCamera(30, window.innerWidth / window.innerHeight, 
+            camera = new THREE.PerspectiveCamera(24, window.innerWidth / window.innerHeight, 
                         1, 1000);
             camera.position.z = 14;
             lightsChange();
